# iniparsercxx

./: CMakeLists.txt
cmake/: iniparsercxxConfig.cmake.in
src/: CMakeLists.txt  iniparsercxx.cpp
tests/: CMakeLists.txt  test_iniconfig.cpp
